# signal-generator

./: README.md
Source/: .gitignore  CMakeLists.txt  build.sh
Source/src/: config.c  config.h  inputs.c  inputs.h  logging.c  logging.h  main.c  pin_io.c  pin_io.h  waves.c  waves.h
